# Uni-projects

./: README.md
Analiza błędów sumowania - algorytmy numeryczne/: h2.txt  h3.txt  python.py  skrypt.c
Analiza błędów sumowania - algorytmy numeryczne/latex/: main (3).tex
Generowanie konfiguracji szachowych/: CMakeLists.txt  Readme.md  input.txt  main.c  main_functions.c  main_functions.h  start.sh
Generowanie konfiguracji szachowych/tests/: CMakeLists.txt  test_main.cpp
Modelowanie fal na morzu/: Animacja.py  Wykres.py  wyniki_symulacji.csv
Projekt OOP Pogotowie ratunkowe/: Dyspozytor.java  JednostkaRatownicza.java  Lokalizacja.java  Osoba.java  Pogotowie.java  Policja.java  StatusJednostki.java  StrazPozarna.java  Symulacja.java  Szpital.java  Wypadek.java  Zgloszenie.java
Projekt falowanie/: Skrypt1.c
Szkic aplikacji do analizy ocen i nastroju/: course_data.json
